# opstop_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup_python_env.in
.github/workflows/: build.yml
bindinds/: bindings.cpp  pyopstop.hpp
bindings/: bindings.cpp
cmake/: OpStopConfig.cmake.in
docker/: build_image.bash  build_image.bat  container-start.bash  container-start.bat  docker.dockerfile  image.dockerfile  vim_installation.bash
docker/configfiles/: run_time_statistics.bash
examples/cpp/: initial_conditions_convergence_statistics.cpp  solution_statistics.cpp
examples/python/: example.py
include/opstop/: acceleration_constraints.hpp  diffeo_constraints.hpp  differ.hpp  excursion_cost.hpp  ipopt_problem.hpp  jerk_constraint.h  jerk_constraints.hpp  jerk_l2_constraints.hpp  parametrization.hpp  parametrization_variables.hpp  time_cost.hpp  torque_constraint.hpp  velocity_constraint.hpp  velocity_constraints.hpp
python/opstop/: __init__.py
src/: acceleration_constraints.cpp  diffeo_constraints.cpp  differ.cpp  excursion_cost.cpp  ipopt_problem.cpp  jerk_constraint.cpp  jerk_constraints.cpp  jerk_l2_constraints.cpp  parametrization.cpp  parametrization_variables.cpp  time_cost.cpp  torque_constraint.cpp  velocity_constraints.cpp
sym/: plot.py
tests/: CMakeLists.txt  acceleration_constraints.cpp  diffeo.py  initial_conditions_convergence_statistics.cpp  jerk_constraints.cpp  jerk_l2_constraints.cpp  minimum_time_bounded_acceleration.cpp  minimum_time_bounded_acceleration.py  minimum_time_bounded_jerk.cpp  minimum_time_bounded_jerk.py  minimum_time_bounded_jerk_l2.cpp  parametrization.cpp  parametrization.py  solution_statistics.cpp  tools.py  torque_constraint.cpp  velocity_constraints.cpp
tests/urdf/: panda_arm.urdf  panda_arm_with_fingers.urdf
